--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "jquery": "^3.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "request": "^2.88.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack-dev-middleware": "^6.0.1"
   },
   "scripts": {
     "build": "react-scripts build",
